# atakit

./: .gitignore  Cargo.toml  README.md  justfile
crates/atakit/: Cargo.toml
crates/atakit/src/: config.rs  env.rs  instances.rs  main.rs  registry.rs  types.rs
crates/atakit/src/commands/: config.rs  mod.rs  publish_workload.rs  sim_agent.rs
crates/atakit/src/commands/build_workload/: analyze.rs  mod.rs  packager.rs
crates/atakit/src/commands/deploy/: config.rs  init.rs  mod.rs  runner.rs
crates/atakit/src/commands/image/: fetch_dev_profile.rs  ls.rs  mod.rs  publish.rs  pull.rs  rm.rs  types.rs
crates/atakit/src/commands/internal/: deploy.rs  manage.rs  mod.rs  register_session.rs  sim_agent.rs
crates/atakit/src/commands/internal/deploy/: azure.rs  fat_image.rs  gcp.rs  qemu.rs
crates/atakit/src/commands/internal/manage/: update_workload.rs
crates/atakit/src/commands/registry/: list.rs  mod.rs  pull.rs  query.rs  switch.rs
crates/atakit/src/commands/workload/: build.rs  measure.rs  mod.rs  packager.rs  publish.rs
crates/automata-cvm-agent/: Cargo.toml
crates/automata-cvm-agent/src/: cvm_agent.rs  device.rs  lib.rs  registration.rs
crates/automata-cvm-agent/src/client/: cvm_agent.rs  init_client.rs  mod.rs
crates/automata-cvm-agent/src/mock/: builder.rs  evidence.rs  mock_device.rs  mock_device_data.json  mod.rs  pcr.rs  tpm.rs
crates/automata-cvm-agent/src/sim/: config.rs  mod.rs  server.rs  state.rs
crates/automata-linux-release/: Cargo.toml
crates/automata-linux-release/src/: client.rs  download.rs  lib.rs  store.rs  types.rs
crates/container-engine/: Cargo.toml
crates/container-engine/src/: docker.rs  lib.rs  podman.rs
crates/csp/: Cargo.toml
crates/csp/src/: azure.rs  cmd.rs  gcp.rs  lib.rs  qemu.rs
crates/cvm-agent/: Cargo.toml
crates/cvm-agent/src/: client.rs  image_verify.rs  lib.rs  policy.rs  session.rs
crates/workload-compose/: Cargo.toml
crates/workload-compose/src/: convert.rs  lib.rs  manifest.rs  measure.rs  serialize.rs  summarize.rs  types.rs
workload_examples/secure-signer/: .dockerignore  Cargo.toml  atakit.json
workload_examples/secure-signer/container/: Dockerfile  docker-compose.yml
workload_examples/secure-signer/container/additional-data/: signer_key
workload_examples/secure-signer/src/: main.rs
