[workspace]
members = ["crates/*"]
resolver = "2"
exclude = ["workload_examples/*"]

[workspace.package]
version = "0.1.0"
authors = ["Automata Team"]
edition = "2024"
license = "Apache-2.0"

#[profile.dev]
#opt-level = 3

[profile.release]
debug = 1
lto = "thin"

[workspace.dependencies]

automata-linux-release = { path = "crates/automata-linux-release" }
csp = { path = "crates/csp" }
automata-cvm-agent = { path = "crates/automata-cvm-agent" }
workload-compose = { path = "crates/workload-compose" }
#automata-tee-workload-measurement = { git = "https://github.com/automata-network/automata-tee-workload-measurement", branch = "develop" }
automata-tee-workload-measurement = { path = "../tee-workload-attestation/crates/automata-tee-workload-measurement/" }

clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexmap = { version = "2", features = ["serde"] }
compose_spec = "0.3"
fatfs = "0.3"
fscommon = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
indicatif = "0.17"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
sha3 = "0.10"
hex = "0.4"
alloy = { git = "https://github.com/automata-network/alloy-ext.git", package = "alloy-ext" }
tempfile = "3"