[package]
name = "atakit"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
flate2.workspace = true
tar.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indexmap.workspace = true
fatfs.workspace = true
fscommon.workspace = true
automata-linux-release.workspace = true
csp.workspace = true
cvm-agent = { workspace = true, features = ["client"] }
workload-compose.workspace = true
reqwest.workspace = true
tokio-util.workspace = true
k256.workspace = true
sha3.workspace = true
hex.workspace = true
alloy.workspace = true
automata-tee-workload-measurement.workspace = true
tempfile = "3"

[features]
default = ["csp/clap", "internal"]
internal = []