[package]
name = "cvm-agent"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

# Client dependencies (optional, for atakit integration)
alloy = { workspace = true, optional = true }
anyhow = { version = "1", optional = true }
hex = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
client = ["alloy", "anyhow", "hex", "reqwest", "tokio", "tokio-util", "tracing"]
